--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,16 +8,16 @@
   /** primary **/
   --ion-color-primary: #E2666A;
   --ion-color-primary-rgb: 226,102,106;
-  --ion-color-primary-contrast: #000000;
-  --ion-color-primary-contrast-rgb: 0,0,0;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
   --ion-color-primary-shade: #c75a5d;
   --ion-color-primary-tint: #e57579;
 
   /** secondary **/
   --ion-color-secondary: #fff;
   --ion-color-secondary-rgb: 12,209,232;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-contrast: #000000;
+  --ion-color-secondary-contrast-rgb: 0,0,0;
   --ion-color-secondary-shade: #0bb8cc;
   --ion-color-secondary-tint: #24d6ea;
 
